<resources>
    <string name="app_name">Mobiquity Test</string>
    <string name="title_activity_dashboard">Dashboard Activity</string>
    <string name="title_home">Home</string>
    <string name="title_help">Help</string>
    <string name="title_settings">Settings</string>
    <string name="no_cities_found_please_add_a_city_by_clicking_button">No Cities Found. Please add a city by clicking + button</string>
    <string name="add">Add</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="centigrade_symbol"> °C</string>
    <string name="farenhite_symbol"> °F</string>
    <string name="kelvin_symbol"> °K</string>
    <string name="action_settings">Settings</string>
    <string name="temp">Temp</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="percentage_symbol">%</string>
    <string name="units_wind">KmH</string>
    <string name="reset_locations">Reset Locations</string>
</resources>